tests/positive/basic/string_builders/input.ci
void main() {
    print(join(["alpha", "beta"], "-") + "\n");
    print(replace("foobar", "o", "X") + "\n");
    print(format("{}:{}", ["L", "R"]) + "\n");
}
