tests/negative/runtime/format_too_few_args/input.ci
void main() {
    print(format("{} {}", ["a"]) + "\n");
}
